--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <h1 class="title">全境封锁2伤害计算器</h1>
   <div class="all">
-    <div id="root">
+    <div id="root" class="first">
       <input v-model="arms" type="text" name="arms" placeholder="武器基础白字" /><br /><br />
       <input v-model="RedCore" type="text" name="RedCore" placeholder="红核数量" /><br /><br />
       <input v-model="WeaponType" type="text" name="Weapon type" placeholder="武器种类伤害加成(%)" /><br /><br />
