添加多种增伤

--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
   <div class="all">
     <div id="root" class="first">
       <input v-model="arms" type="text" name="arms" placeholder="武器基础白字" />
-      <input v-model="RedCore" type="text" name="RedCore" placeholder="全武器伤" />
+      <input v-model="RedCore" type="text" name="RedCore" placeholder="全武器伤(%)" />
       <input v-model="WeaponType" type="text" name="Weapon type" placeholder="武器种类伤害加成(%)" />
+      <input v-model="CHD" type="text" name="CHD" placeholder="爆伤(%)"/>
+      <input v-model="DTA" type="text" name="DTA" placeholder="装甲伤(%)"/>
+      <input v-model="DTOC" type="text" name="DTOC" placeholder="掩体伤(%)"/>
+      <input v-model="DTH" type="text" name="DTH" placeholder="生命伤(%)"/>
     </div>
     <div id="Checkbox" class="Checkbox">
       <div>
