新增技师拆解，新增独立伤分类

--- a/index.html
+++ b/index.html
@@ -275,6 +275,10 @@
           <input @click="ChSurvivalistTacticalLink" type="checkbox">
           <span>生存专家--战术链接</span>
         </div>
+        <div>
+          <input @click="ChTechnicianDismantling" type="checkbox">
+          <span>技师--拆解</span>
+        </div>
       </div>
     </div>
   </div>
