--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
   <h1 class="title">全境封锁2伤害计算器</h1>
   <div class="all">
     <div id="root" class="first">
-      <p>武器基础白字<input v-model="arms" type="text" name="arms" placeholder="武器基础白字" /></p>
-      <p>全武器伤<input v-model="RedCore" type="text" name="RedCore" placeholder="全武器伤(%)" /></p>
-      <p>武器种类伤害加成<input v-model="WeaponType" type="text" name="Weapon type" placeholder="武器种类伤害加成(%)" /></p>
-      <p>武器精通等级<input v-model="weaponM" type="text" name="weaponM" placeholder="武器精通等级"/></p>
-      <p>爆头伤<input v-model="HSD" type="text" name="HSD" placeholder="爆头伤(%)" /></p>
-      <p>爆伤<input v-model="CHD" type="text" name="CHD" placeholder="爆伤(%)" /></p>
-      <p>生命伤<input v-model="DTH" type="text" name="DTH" placeholder="生命伤(%)" /></p>
-      <p>装甲伤<input v-model="DTA" type="text" name="DTA" placeholder="装甲伤(%)" /></p>
-      <p>掩体伤<input v-model="DTOC" type="text" name="DTOC" placeholder="掩体伤(%)" /></p>
+      <p>武器基础白字：<input v-model="arms" type="text" name="arms" placeholder="武器基础白字" /></p>
+      <p>全武器伤(%)：<input v-model="RedCore" type="text" name="RedCore" placeholder="全武器伤(%)" /></p>
+      <p>武器种类伤害加成(%)：<input v-model="WeaponType" type="text" name="Weapon type" placeholder="武器种类伤害加成(%)" /></p>
+      <p>爆头伤(%)：<input v-model="HSD" type="text" name="HSD" placeholder="爆头伤(%)" /></p>
+      <p>爆伤(%)：<input v-model="CHD" type="text" name="CHD" placeholder="爆伤(%)" /></p>
+      <p>生命伤(%)：<input v-model="DTH" type="text" name="DTH" placeholder="生命伤(%)" /></p>
+      <p>装甲伤(%)：<input v-model="DTA" type="text" name="DTA" placeholder="装甲伤(%)" /></p>
+      <p>掩体伤(%)：<input v-model="DTOC" type="text" name="DTOC" placeholder="掩体伤(%)" /></p>
     </div>
     <div id="Checkbox" class="Checkbox">
       <div class="firstbox">
@@ -289,7 +288,7 @@
     </div>
   </div>
   <div id="Calculation" class="allcompute">
-    <button @click="culation">计算</button>
+    <a @click="culation" href="#">计算</a>
     <h1>全天赋武器伤加成:{{FULLWDJ.toFixed(2)}}</h1>
     <h1>全天赋总武器伤加成:{{FULLTWD.toFixed(2)}}</h1><br />
     <h1>对生命值敌人伤害:{{HSum.toFixed(2)}}</h1>
@@ -310,7 +309,7 @@
     <h2>对离开掩体目标爆头:{{ASumHOC.toFixed(2)}}</h2>
     <h2>对离开掩体目标头部暴击:{{ASumHBOC.toFixed(2)}}</h2>
   </div>
-  <div>
+  <div class="tips">
     <p>输入框直接输入数值，无需输入百分号，武器精通等级同上，例如5级直接输入数字5</p>
     <p>武器基础白字是无任何增伤，武器原本的伤害。请在游戏中开启"显示基础伤害"查看</p>
     <p>计算结果有些许偏差是正常的</p>
