--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="js/vue.js" type="text/javascript"></script>
   <link rel="stylesheet" href="css/css.css">
+  <link rel="icon" href="imgs/Tom Clancys The Division 2.ico">
   <title>全境封锁2伤害计算器1.0 By-MuFen</title>
 </head>
 
@@ -14,14 +15,14 @@
   <h1 class="title">全境封锁2伤害计算器</h1>
   <div class="all">
     <div id="root" class="first">
-      <p>武器基础白字：<input v-model="arms" type="text" name="arms" placeholder="武器基础白字" /></p>
-      <p>全武器伤(%)：<input v-model="RedCore" type="text" name="RedCore" placeholder="全武器伤(%)" /></p>
-      <p>武器种类伤害加成(%)：<input v-model="WeaponType" type="text" name="Weapon type" placeholder="武器种类伤害加成(%)" /></p>
-      <p>爆头伤(%)：<input v-model="HSD" type="text" name="HSD" placeholder="爆头伤(%)" /></p>
-      <p>爆伤(%)：<input v-model="CHD" type="text" name="CHD" placeholder="爆伤(%)" /></p>
-      <p>生命伤(%)：<input v-model="DTH" type="text" name="DTH" placeholder="生命伤(%)" /></p>
-      <p>装甲伤(%)：<input v-model="DTA" type="text" name="DTA" placeholder="装甲伤(%)" /></p>
-      <p>掩体伤(%)：<input v-model="DTOC" type="text" name="DTOC" placeholder="掩体伤(%)" /></p>
+      <p>武器基础白字<input v-model="arms" type="text" name="arms" placeholder="武器基础白字" /></p>
+      <p>全武器伤<input v-model="RedCore" type="text" name="RedCore" placeholder="全武器伤(%)" /></p>
+      <p>武器种类伤害加成<input v-model="WeaponType" type="text" name="Weapon type" placeholder="武器种类伤害加成(%)" /></p>
+      <p>爆头伤<input v-model="HSD" type="text" name="HSD" placeholder="爆头伤(%)" /></p>
+      <p>爆伤<input v-model="CHD" type="text" name="CHD" placeholder="爆伤(%)" /></p>
+      <p>生命伤<input v-model="DTH" type="text" name="DTH" placeholder="生命伤(%)" /></p>
+      <p>装甲伤<input v-model="DTA" type="text" name="DTA" placeholder="装甲伤(%)" /></p>
+      <p>掩体伤<input v-model="DTOC" type="text" name="DTOC" placeholder="掩体伤(%)" /></p>
     </div>
     <div id="Checkbox" class="Checkbox">
       <div class="firstbox">
@@ -32,7 +33,8 @@
         </div>
         <div>
           <input @click="ChBreadbasket" type="checkbox">
-          <span>面包篮(满)</span>
+          <span>面包篮</span>
+          <input v-if="HI.Breadbasket" v-model="BreadbasketC" type="text" />
         </div>
         <div>
           <input @click="ChFightHandToHandWith" type="checkbox">
@@ -60,11 +62,13 @@
         </div>
         <div>
           <input @click="ChOS" type="checkbox">
-          <span>乐天派(取50%)</span>
+          <span>乐天派</span>
+          <input v-if="WDJ.OS" v-model="OSC" type="text" />
         </div>
         <div>
           <input @click="ChTTM" type="checkbox">
-          <span>排山倒海(满)</span>
+          <span>排山倒海</span>
+          <input v-if="AmpWd.TTM" v-model="TTMC" type="text" />
         </div>
         <div>
           <input @click="ChFistToMeat" type="checkbox">
@@ -72,15 +76,18 @@
         </div>
         <div>
           <input @click="ChFullOfEnergy" type="checkbox">
-          <span>充满干劲(满)</span>
+          <span>充满干劲</span>
+          <input v-if="AmpWd.FullOfEnergy" v-model="FullOfEnergyC" type="text" />
         </div>
         <div>
           <input @click="ChRanger" type="checkbox">
-          <span>游骑兵(30米)</span>
+          <span>游骑兵</span>
+          <input v-if="MD.Ranger" v-model="RangerC" type="text" />
         </div>
         <div>
           <input @click="ChRifleman" type="checkbox">
-          <span>步枪兵(满)</span>
+          <span>步枪兵</span>
+          <input v-if="WDJ.Rifleman" v-model="RiflemanC" type="text" />
         </div>
         <div>
           <input @click="ChToAbuse" type="checkbox">
@@ -99,15 +106,16 @@
         <h2>胸甲天赋</h2>
         <div>
           <input @click="ChFeelTheSame" type="checkbox">
-          <span>感同深受(队友携带并且满值)</span>
+          <span>感同深受(队友携带且六电)</span>
         </div>
         <div>
           <input @click="ChFeelTheSameY" type="checkbox">
-          <span>感同深受(自身携带并且满值)</span>
+          <span>感同深受(自身携带且六电)</span>
         </div>
         <div>
           <input @click="ChAbsorbed" type="checkbox">
-          <span>专注(满)</span>
+          <span>专注</span>
+          <input v-if="TWD.Absorbed" v-model="AbsorbedC" type="text" />
         </div>
         <div>
           <input @click="ChGlassCannon" type="checkbox">
@@ -119,11 +127,13 @@
         </div>
         <div>
           <input @click="ChIntimidate" type="checkbox">
-          <span>威吓(满)</span>
+          <span>威吓</span>
+          <input v-if="MD.Intimidate" v-model="IntimidateC" type="text" />
         </div>
         <div>
           <input @click="ChOF" type="checkbox">
-          <span>抹灭性破坏(满)</span>
+          <span>抹灭性破坏</span>
+          <input v-if="TWD.OF" v-model="OFC" type="text" />
         </div>
         <div>
           <input @click="ChShelterCover" type="checkbox">
@@ -135,7 +145,7 @@
         </div>
         <div>
           <input @click="ChHeadHunter" type="checkbox">
-          <span>猎头者</span>
+          <span>猎头者(MAX)</span>
         </div>
         <div>
           <input @click="ChScout" type="checkbox">
@@ -166,7 +176,8 @@
         </div>
         <div>
           <input @click="ChUnstoppableForce" type="checkbox">
-          <span>无人能挡的力量(满)</span>
+          <span>无人能挡的力量</span>
+          <input v-if="TWD.UnstoppableForce" v-model="UnstoppableForceC" type="text" />
         </div>
         <div>
           <input @click="ChVersatile" type="checkbox">
@@ -194,10 +205,12 @@
         <div>
           <input @click="ChSawyersKneepads" type="checkbox">
           <span>索耶的护膝(满)</span>
+          <input v-if="TWD.SawyersKneepads" v-model="SawyersKneepadsC" type="text" />
         </div>
         <div>
           <input @click="ChDodgeCityHolster" type="checkbox">
           <span>道奇城枪手枪套</span>
+          <input v-if="WDJ.DodgeCityHolster" v-model="DodgeCityHolsterC" type="text" />
         </div>
         <div>
           <input @click="ChBigHorn" type="checkbox">
@@ -232,7 +245,8 @@
         </div>
         <div>
           <input @click="ChStrikersBattlegear" type="checkbox">
-          <span>突袭者战斗装备(满层)</span>
+          <span>突袭者战斗装备</span>
+          <input v-if="MD.StrikersBattlegear" v-model="StrikersBattlegearC" type="text" />
         </div>
         <div>
           <input @click="ChTipOfTheSpear" type="checkbox">
@@ -249,6 +263,7 @@
         <div>
           <input @click="ChHeartTerminator" type="checkbox">
           <span>芳心终结者(满层)</span>
+          <input v-if="MD.HeartTerminator" v-model="HeartTerminatorC" type="text" />
         </div>
       </div>
       <div class="sixthbox">
@@ -258,8 +273,12 @@
           <span>脉冲--扫描/遥控</span>
         </div>
         <div>
+          <input @click="ChAchillesPulse" type="checkbox">
+          <span>脉冲--阿基里斯</span>
+        </div>
+        <div>
           <input @click="ChFirewallStrikerShield" type="checkbox">
-          <span>突袭者护盾</span>
+          <span>突袭者护盾(11%)</span>
         </div>
       </div>
       <div class="seventhbox">
