--- a/Tom-Clancys-The-Division-2-Injury-calculation-tool/index.html
+++ b/Tom-Clancys-The-Division-2-Injury-calculation-tool/index.html
@@ -18,6 +18,7 @@
       <p>武器基础白字<input v-model="arms" type="text" name="arms" placeholder="武器基础白字" /></p>
       <p>全武器伤<input v-model="RedCore" type="text" name="RedCore" placeholder="全武器伤(%)" /></p>
       <p>武器种类伤害加成<input v-model="WeaponType" type="text" name="Weapon type" placeholder="武器种类伤害加成(%)" /></p>
+      <p>武器精通等级<input v-model="weaponM" type="text" name="weaponM" placeholder="武器精通等级"/></p>
       <p>爆头伤<input v-model="HSD" type="text" name="HSD" placeholder="爆头伤(%)" /></p>
       <p>爆伤<input v-model="CHD" type="text" name="CHD" placeholder="爆伤(%)" /></p>
       <p>生命伤<input v-model="DTH" type="text" name="DTH" placeholder="生命伤(%)" /></p>
@@ -262,7 +263,7 @@
         </div>
         <div>
           <input @click="ChHeartTerminator" type="checkbox">
-          <span>芳心终结者(满层)</span>
+          <span>芳心终结者</span>
           <input v-if="MD.HeartTerminator" v-model="HeartTerminatorC" type="text" />
         </div>
       </div>
@@ -307,7 +308,7 @@
     </div>
   </div>
   <div id="Calculation" class="allcompute">
-    <a @click="culation" href="#">计算</a>
+    <a @click="culation" href="#" onclick="return false;">计算</a>
     <div class="aspacing"></div>
     <h1>全天赋武器伤加成:{{FULLWDJ.toFixed(2)}}</h1>
     <h1>全天赋总武器伤加成:{{FULLTWD.toFixed(2)}}</h1><br />
@@ -330,11 +331,9 @@
     <h2>对离开掩体目标头部暴击:{{ASumHBOC.toFixed(2)}}</h2>
   </div>
   <div class="tips">
-    <h2>使用规则如下</h2>
     <p>输入框直接输入数值，无需输入百分号，武器精通等级同上，例如5级直接输入数字5</p>
     <p>武器基础白字是无任何增伤，武器原本的伤害。请在游戏中开启"显示基础伤害"查看</p>
     <p>计算结果有些许偏差是正常的</p>
-    <p>叠层天赋大多数取最大值</p>
   </div>
 </body>
 <script src="js/Tom Clancys The Division 2.js" type="text/javascript"></script>
