--- a/Tom-Clancys-The-Division-2-Injury-calculation-tool/index.html
+++ b/Tom-Clancys-The-Division-2-Injury-calculation-tool/index.html
@@ -16,10 +16,10 @@
 <body>
   <h1 class="title">全境封锁2武器伤害计算器</h1>
   <div class="tips" id="Tips">
-    <p>输入框直接输入数值，无需输入百分号，武器精通等级同上，例如5级直接输入数字5</p>
-    <p>武器基础白字是无任何增伤，武器原本的伤害。请在游戏中开启"显示基础伤害"查看</p>
+    <p>输入框直接输入数值，无需输入百分号，武器精通等级同上，例如5级直接输入数字5，数值以<span style="color: red;">"角色面板"</span>为准</p>
+    <p>武器基础白字是无任何增伤，武器原本的伤害。请在游戏中开启<span style="color: red;">"显示基础伤害"</span>查看</p>
     <p>计算结果有些许偏差是正常的</p>
-    <p>只有在考虑对机械单位时才勾选"技师--拆解"，机械单位并不吃装甲伤，也不会进掩体，所以隐藏多数计算结果只显示已计算生命值/掩体伤的非暴击害/暴击伤害</p>
+    <p>只有在考虑对机械单位时才勾选<span style="color: red;">"技师--拆解"</span>，机械单位并不吃装甲伤，也不会进掩体，所以隐藏多数计算结果只显示已计算生命值/掩体伤的非暴击害/暴击伤害</p>
     <p>叠层天赋以某个条件增伤时输入框输入对应的层数即可(例如专注每秒增伤，乐天派每减少10%为一层)</p>
     <p>追悼长期BUFF指每个已捡起挂饰，短期BUFF指捡起挂饰时</p>
     <a class="star" target="_blank"
@@ -133,6 +133,10 @@
         <div>
           <input @click="ChGlassCannon" type="checkbox">
           <span>玻璃大炮</span>
+        </div>
+        <div>
+          <input @click="ChPGlassCannon" type="checkbox">
+          <span>完美玻璃大炮</span>
         </div>
         <div>
           <input @click="ChGunslinger" type="checkbox">
