--- a/Tom-Clancys-The-Division-2-Injury-calculation-tool/index.html
+++ b/Tom-Clancys-The-Division-2-Injury-calculation-tool/index.html
@@ -30,13 +30,13 @@
   <div class="all">
     <div id="root" class="first">
       <p>武器基础白字<input v-model="arms" type="text" name="arms" placeholder="武器基础白字" /></p>
-      <p>全武器伤<input v-model="RedCore" type="text" name="RedCore" placeholder="所有武器的伤害加成(%)" /></p>
+      <p>所有武器的伤害加成<input v-model="RedCore" type="text" name="RedCore" placeholder="所有武器的伤害加成(%)" /></p>
       <p>武器种类伤害加成<input v-model="WeaponType" type="text" name="Weapon type" placeholder="武器种类伤害加成(%)" /></p>
-      <p>爆头伤<input v-model="HSD" type="text" name="HSD" placeholder="爆头伤(%)" /></p>
-      <p>爆伤<input v-model="CHD" type="text" name="CHD" placeholder="爆伤(%)" /></p>
-      <p>生命伤<input v-model="DTH" type="text" name="DTH" placeholder="生命伤(%)" /></p>
-      <p>装甲伤<input v-model="DTA" type="text" name="DTA" placeholder="装甲伤(%)" /></p>
-      <p>掩体伤<input v-model="DTOC" type="text" name="DTOC" placeholder="掩体伤(%)" /></p>
+      <p>爆头伤害<input v-model="HSD" type="text" name="HSD" placeholder="爆头伤(%)" /></p>
+      <p>爆击伤害<input v-model="CHD" type="text" name="CHD" placeholder="爆伤(%)" /></p>
+      <p>对生命值伤害<input v-model="DTH" type="text" name="DTH" placeholder="生命伤(%)" /></p>
+      <p>装甲伤害<input v-model="DTA" type="text" name="DTA" placeholder="装甲伤(%)" /></p>
+      <p>对离开掩体目标伤害<input v-model="DTOC" type="text" name="DTOC" placeholder="掩体伤(%)" /></p>
     </div>
     <div id="Checkbox" class="Checkbox">
       <div class="firstbox">
