--- a/Tom-Clancys-The-Division-2-Injury-calculation-tool/index.html
+++ b/Tom-Clancys-The-Division-2-Injury-calculation-tool/index.html
@@ -8,6 +8,8 @@
   <script src="js/vue.js" type="text/javascript"></script>
   <script src="js/jqueryMin.js" type="text/javascript"></script>
   <script src="js/Sidebar float.js" type="text/javascript"></script>
+  <!-- 强制浏览器缩放比例 -->
+  <script src="js/Scale.js" type="text/javascript"></script>
   <link rel="stylesheet" href="css/css.css">
   <link rel="icon" href="imgs/Tom Clancys The Division 2.ico">
   <title>全境封锁2伤害计算器1.0 By-MuFen</title>
@@ -36,7 +38,7 @@
       <p>爆击伤害<input v-model="CHD" type="text" name="CHD" placeholder="爆伤(%)" /></p>
       <p>对生命值伤害<input v-model="DTH" type="text" name="DTH" placeholder="生命伤(%)" /></p>
       <p>装甲伤害<input v-model="DTA" type="text" name="DTA" placeholder="装甲伤(%)" /></p>
-      <p>对离开掩体目标伤害<input v-model="DTOC" type="text" name="DTOC" placeholder="掩体伤(%)" /></p>
+      <p>对离开掩体目标伤<input v-model="DTOC" type="text" name="DTOC" placeholder="掩体伤(%)" /></p>
     </div>
     <div id="Checkbox" class="Checkbox">
       <div class="firstbox">
@@ -337,10 +339,9 @@
   <div id="Calculation" class="allcompute">
     <a @click="culation" href="#" onclick="return false;">计算</a>
     <div class="aspacing"></div>
-    <h1>全天赋武器伤加成:<br>{{FULLWDJ.toFixed(2)}}</h1>
-    <h1>全天赋总武器伤加成:<br>{{FULLTWD.toFixed(2)}}</h1>
+    <h1>全天赋武器伤加成:{{FULLWDJ.toFixed(2)}}</h1>
+    <h1>全天赋总武器伤加成:{{FULLTWD.toFixed(2)}}</h1>
     <h1>猎头者奖励:<br>{{HeadHunterDs.toFixed(2)}}</h1>
-    <br />
     <p><input @click="CNV" type="checkbox">显示详细计算结果</p>
     <div v-if="detailed">
       <h1>{{HSUMNAME}}:<br>{{HSum.toFixed(2)}}</h1>
