适配移动端

--- a/Tom-Clancys-The-Division-2-Injury-calculation-tool/index.html
+++ b/Tom-Clancys-The-Division-2-Injury-calculation-tool/index.html
@@ -339,6 +339,7 @@
   <div id="Calculation" class="allcompute">
     <a @click="culation" href="#" onclick="return false;">计算</a>
     <div class="aspacing"></div>
+    <div class="usculation">
     <h1>全天赋武器伤加成:{{FULLWDJ.toFixed(2)}}</h1>
     <h1>全天赋总武器伤加成:{{FULLTWD.toFixed(2)}}</h1>
     <h1>猎头者奖励:<br>{{HeadHunterDs.toFixed(2)}}</h1>
@@ -373,6 +374,7 @@
       <h2 v-if="TechnicianDismantlingTag">爆头:{{ASumHOC.toFixed(2)}}</h2>
       <h2 v-if="TechnicianDismantlingTag">头部暴击:{{ASumHBOC.toFixed(2)}}</h2>
     </div>
+  </div>
   </div>
   <div class="End" id="End">
     <div class="endk">
